--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- pixiv three-vrm.js -->
 <script src="https://unpkg.com/@pixiv/three-vrm@0.3.0/lib/three-vrm.js"></script>
 
-<script  src="./script.js"></script>
+<script  src="_/theme/script.js"></script>
 
  <div class="backplate" id="backplate" >
     <h1>VU-VRM</h1>
