--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>VU-VRM</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="_/theme/theme.css">
 </head>
 
 <body>
